# sakha

./: .env.example  .gitignore  AGENTS.md  BLOG.md  Dockerfile  README.md  inference.py  modal_train.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/plans/: evaluation-env-hardening-plan.md  production-grade-env-plan.md  sakha-winning-plan.md
.sisyphus/research/: sakha-findings.md  sakha-sources.md
artifacts/: baseline_easy.json  baseline_hard.json  baseline_hard_noop.json  baseline_medium.json
docs/: benchmark_spec.md  hackathon_checklist.md  submission_runbook.md
notebooks/: Sakha GRPO Training.ipynb  sakha_grpo_training.ipynb
scripts/: benchmark_separation_report.py  capture_golden_rewards.py  check_hf_endpoint.py  eval_common.py  eval_grpo.py  eval_harness.py  eval_policies.py  kaggle_train.py  modal_quick_train.py  modal_smoke_test.py  modal_train.py  plot_results.py  reproducibility_report.py  submit_check.py  train_grpo.py
server/: app.py
src/sakha/: __main__.py  client.py  env.py  formatters.py  graders.py  grpo_env.py  grpo_training.py  models.py  rubrics.py
tests/: test_adversarial_policies.py  test_baseline_repro.py  test_determinism.py  test_easy_grader.py  test_edge_cases.py  test_env_contract.py  test_exploit_resistance.py  test_grpo_training_utils.py  test_inference_parser.py  test_medium_hard_grader.py  test_new_features.py  test_regressions.py  test_reward_alignment.py  test_rubric_parity.py  test_smoke.py
tests/fixtures/: rubric_golden_easy.json  rubric_golden_hard.json  rubric_golden_medium.json
